<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/kh4"
        android:layout_marginTop="20dp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/app_mountgo"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="2dp"
        />

     <TextView
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:text="@string/b_toute"
         android:textSize="26sp"
         android:layout_gravity="center"
         android:gravity="center"
         android:textStyle="bold"
         android:layout_marginHorizontal="60dp"
         />


     <TextView
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:text="@string/sdlfk"
         android:textStyle="bold"
         android:textSize="18sp"
         android:layout_gravity="center|start"
         android:gravity="center|start"
         android:layout_marginStart="50dp"
         android:layout_marginTop="20dp"
         />
    
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/hint_name"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:id="@+id/buy_a_name"
        android:inputType="text"
        />

        <EditText
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/hint_suname"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:id="@+id/buy_a_surname"
             android:inputType="text"
        />

        <EditText
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/hint_phone"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:id="@+id/buy_a_phone"
             android:inputType="phone"
        />

        <EditText
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/hint_date_birst"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:id="@+id/buy_a_date"
            android:inputType="date"
        />

        <EditText
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/hint_passport"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:id="@+id/buy_a_passport"
            android:inputType="number"
        />



      <Button
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:text="@string/zadfj"
         android:id="@+id/buy_zayavka"
         android:layout_marginHorizontal="60dp"
          android:layout_marginTop="80dp"
         />



</androidx.appcompat.widget.LinearLayoutCompat>