<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TwoFragment"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:src="@drawable/kh4"
        android:layout_marginTop="20dp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/app_mountgo"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="2dp"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="30dp"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:id="@+id/first_frag1"
            android:text="@string/aaa"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:id="@+id/first_frag2"
            android:layout_marginStart="10dp"
             android:text="@string/bbb"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_marginHorizontal="20dp"
        app:navGraph="@navigation/mobile_navigation"
            />


    <Button
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/aa_go_buy"
        android:id="@+id/buy_id"
        android:layout_marginBottom="80dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="7dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />



</androidx.appcompat.widget.LinearLayoutCompat>