<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


<!--    image, R.id.cite, R.id.namesd, R.id.phone-->
<!--    -->

     <ImageView
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:id="@+id/imageiid"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/nma"
            android:layout_weight="0.3"
            android:layout_gravity="center|start"
            android:gravity="center|start"
            android:layout_marginStart="16dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/namesdfv"
            android:layout_weight="0.5"
            android:layout_gravity="center|start"
            android:gravity="center|start"
            android:layout_marginStart="6dp"
            />

    </LinearLayout>



        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/nmacit"
            android:layout_weight="0.3"
            android:layout_gravity="center|start"
            android:gravity="center|start"
            android:layout_marginStart="16dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/namescijdd"
            android:layout_weight="0.5"
            android:layout_gravity="center|start"
            android:gravity="center|start"
            android:layout_marginStart="6dp"
            />

    </LinearLayout>



        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/nmapdho"
            android:layout_weight="0.3"
            android:layout_gravity="center|start"
            android:gravity="center|start"
            android:layout_marginStart="16dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/namesdpgonee"
            android:layout_weight="0.5"
            android:layout_gravity="center|start"
            android:gravity="center|start"
            android:layout_marginStart="6dp"
            />

    </LinearLayout>




</androidx.appcompat.widget.LinearLayoutCompat>