<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.FragmentTwo"
    android:orientation="vertical"
    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:id="@+id/uma_ftratwo"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/name_hot"
            android:layout_gravity="center|start"
            android:gravity="center|start"
            android:layout_weight="0.3"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:textSize="17sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/name_asdjot"
                android:layout_weight="0.5"
                android:layout_gravity="center|start"
                android:gravity="center|start"
                android:textSize="17sp"
                android:layout_marginStart="20dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        >


             <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/city_namedf"
            android:layout_gravity="center|start"
            android:gravity="center|start"
            android:layout_weight="0.3"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:textSize="17sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/city_djsfdf"
                android:layout_weight="0.5"
                      android:layout_gravity="center|start"
            android:gravity="center|start"
            android:textSize="17sp"
                android:layout_marginStart="20dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        >

                  <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/steer_sdkfj"
            android:layout_gravity="center|start"
            android:gravity="center|start"
            android:layout_weight="0.3"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:textSize="17sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/addresskdf"
                android:layout_weight="0.5"
                      android:layout_gravity="center|start"
            android:gravity="center|start"
            android:textSize="17sp"
                android:layout_marginStart="20dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        >


                    <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/phonererer"
            android:layout_gravity="center|start"
            android:gravity="center|start"
            android:layout_weight="0.3"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:textSize="17sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/phoetiddd"
                android:layout_weight="0.5"
                      android:layout_gravity="center|start"
            android:gravity="center|start"
            android:textSize="17sp"
                android:layout_marginStart="20dp"/>



    </androidx.appcompat.widget.LinearLayoutCompat>



      <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        >

                   <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/vip_sdf"
            android:layout_gravity="center|start"
            android:gravity="center|start"
            android:layout_weight="0.3"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:textSize="17sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/detail_vip"
                android:layout_weight="0.5"
                      android:layout_gravity="center|start"
            android:gravity="center|start"
            android:textSize="17sp"
                android:layout_marginStart="20dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>