<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.FragmentOne"
    android:orientation="vertical"
    >


        <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:layout_marginTop="58dp"
        >


             <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/start_tdf"
            android:layout_gravity="center|start"
            android:gravity="center|start"
            android:layout_weight="0.3"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:textSize="17sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/start_vip"
                android:layout_weight="0.5"
                      android:layout_gravity="center|start"
            android:gravity="center|start"
            android:textSize="17sp"
                android:layout_marginStart="20dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

                  <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/end_tdf"
            android:layout_gravity="center|start"
            android:gravity="center|start"
            android:layout_weight="0.3"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:textSize="17sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/final_vip"
                android:layout_weight="0.5"
                      android:layout_gravity="center|start"
            android:gravity="center|start"
            android:textSize="17sp"
                android:layout_marginStart="20dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >


                    <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/price_tdf"
            android:layout_gravity="center|start"
            android:gravity="center|start"
            android:layout_weight="0.3"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:textSize="17sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/price_vip"
                android:layout_weight="0.5"
                      android:layout_gravity="center|start"
            android:gravity="center|start"
            android:textSize="17sp"
                android:layout_marginStart="20dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>